test/compile-fail/resolution/type-existence/bound-is-not-trait/expected.txt
error: expected trait, found type `X`
  ┌─ ./test/compile-fail/resolution/type-existence/bound-is-not-trait/top.rhdl:2:9
  │
2 │ fn a<T: X>() {}
  │         ^ not a trait

